2006-10-19  Dwayne Bailey  <dwayne@translate.org.za>

	* gui/gdmlanguages.c: Add Xhosa and fix native name for Zulu

2006-10-23  Brian Cameron  <brian.cameron@sun.com>

	* utils/Makefile.am: Remove X_EXTRA_LIBS and X_LIBS from
	  building of dm_dmx_reconnect_proxy since these libraries
	  are not needed for building this program.

2006-10-20  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml, gui/gdmsession.[ch], gui/greeter/greeter.c,
	  gui/greeter/greeter_action_language.[ch],
	  gui/greeter/greeter_canvas_item.[ch], gui/greeter/greeter_parser.c,
	  gui/greeter/greeter_item_customlist.[ch],
	  gui/greeter/greeter_session.[ch],
	  gui/greeter/themes/*/*xml: Now support "combo" style lists and
	  support "language" and "session" lists which can be used directly
	  in the theme rather than having to use the session/language
	  pop-ups.  Suggestion from Boston GNOME Summit.  The defaul themes
	  now support these combo boxes.
	* gui/greeter_item_ulist.c: Cleanup
	* gui/gdmconfig.[ch]: Renamed function to gdm_save_customlist_data,
	  so it is more clear what the function does.

2006-10-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_system.c:
	  Add icons to the F10/Options menu.  Fixes RFE #360984.  Patch by
	  Sebastien Bacher <seb128@debian.org>.

2006-10-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmphotosetup.c: Enable help button.  Fixes bug #362853.
	  Patch by Matthias Clasen <mclasen@redhat.com>.

2006-10-16  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.17.0:
        * NEWS: Updated.
        * configure.ac: Update to new release version.
	* docs/C/gdm.xml: Update version number.

2006-10-16  Brian Cameron  <brian.cameron@sun.com>

	* NEWS, daemon/auth.c, daemon/gdm.c, daemon/slave.c: Clean up
	  comments.

2006-10-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c, 
	  gui/greeter/greeter_parser.c:  Fix new at-spi code so that if