@@ -1,4 +1,11 @@
-2006-10-19  Dwayne Bailey  <dwayne@translate.org.za>
+2006-10-23  Brian Cameron  <brian.cameron@sun.com>
+
+	* docs/C/gdm.xml: Corrections to spelling and grammar mistakes.
+	  Patch by Malcolm Parsons <malcolm.parsons@gmail.com>.  Also
+	  updated docs for list combo style to indicate this feature is
+          supported in GDM 2.18 and later.
+
+2006-10-23  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* gui/gdmlanguages.c: Add Xhosa and fix native name for Zulu
 
